# moonweb

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE  README.md  index.html  out.html  package-lock.json  package.json  raw.html  server.config  tailwind.config.js  test.html
models/flux/: Cargo.toml
models/flux/src/: flux.py  main.rs
models/llava/: Cargo.toml
models/llava/src/: img.txt  llavanext.py  main.rs  test.py
models/moonmodel/: Cargo.toml
models/moonmodel/src/: main.rs
models/pyworker/: Cargo.toml  build.rs
models/pyworker/src/: main.rs  qwen2.py
models/qwen/: Cargo.toml  test.py
models/qwen/src/: main.rs
public/: login.js  manifest.json  sw.js  tailwind.css
src/: apiserver.rs  authorization.rs  data.rs  ipc.rs  lib.rs  llama.rs  main.rs  master_server.rs  master_state.rs  model.rs  phi3.rs  str_output_stream.rs  token_output_stream.rs  web.rs  web_state.rs  worker_server.rs
