[package]
name = "moonweb"
version = "0.1.0"
authors = ["Lyn-liyuan <lyn@intellicloud.ai>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.5", features = ["web", "router"] }
image-base64-wasm = "0.5.0"
# Debug
dioxus-logger = "0.5.1"
manganis = "0.2.2"
serde = {version = "1.0.203", features = ["derive"] }
serde_json = "1.0"
reqwest = {version = "0.12.5", features = ["json","stream"] }
structopt = "0.3"
clap = { version = "3.0", features = ["derive"] }
lazy_static = "1.4"
comrak = "0.24"
web-sys ={ version = "0.3.69", features = ["Window", "Document", "Element"] }
eventsource-stream = "0.2.3"
futures = "0.3.30"




[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.6.0", features = ["cuda"] }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.6.0", features = ["cuda"] }
tokenizers = { version = "0.19.1", features = ["onig"] }
cpal= { version = "0.15.2", optional = true }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.6.0", features = ["cuda"] }
csv = "1.3.0"
cudarc = { optional = true }
half = { optional = true }
hf-hub = { features = ["tokio"] }
anyhow = "1.0.86"
tokio = { version = "1.38.0", features = ["full"] }
axum = "0.7.5"
dashmap = "5.5.3"
signal-hook = "0.3.17"
ipc-channel = "0.18.1"
async-stream = "0.3.5"
tokio-stream = "0.1.15"



[dev-dependencies]
clap = "*"


